[package]
name = "hardware-keystore"
version = "0.0.1"
edition = "2024"
authors = ["Krishna Kushwaha <hikrishnakush@gmail.com>"]
description = "Cross-platform hardware-backed device keystore abstraction with attestation"
repository = "https://github.com/krishna-kush/hardware-keystore"
readme = "README.md"
license = "MIT"
keywords = ["keystore", "tpm2", "secure-enclave", "strongbox", "attestation"]
categories = ["cryptography", "authentication", "hardware-support", "os", "api-bindings"]

[dependencies]
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
security-framework = "3.5.1"

[target.'cfg(target_os = "linux")'.dependencies]
tss-esapi = "7"
reqwest = { version = "0.13", features = ["blocking"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.60", features = ["Win32_Foundation", "Win32_Security_Cryptography"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"
